[tool.poetry]
name = "tt-sprint4-webapp"
version = "0.1.0"
description = "TripleTen Sprint 4 WebApp with Streamlit"
authors = ["Umberto Fasci <ujfdusty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
streamlit = "^1.38.0"
plotly-express = "^0.4.1"
altair = "^5.4.1"
nbformat = "^5.10.4"
thefuzz = "^0.22.1"
rapidfuzz = "^3.9.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
